implemented java mapping service